resizing nearly done. looks good on all screen sizes. need to fix news column overflow & stock idx cols

--- a/src/index.css
+++ b/src/index.css
@@ -16,43 +16,16 @@ code {
 
 .searchBar{
   border-radius: 5px;
+  margin: 0px 10px;
   width: 79%;
-}
-
-.height-limit{
-  height:50%;
-  /* margin-bottom:15px; */
 }
 
 div[class^='card-'], div[class*='card-']{
   border-color: #0000004b;
 }
 
-.news-stocks-col{
-  margin: 0px 10px;
-}
-
-.card-news{
-  width: auto;
-  min-width: 100%;
-  height: 100%;
-  overflow-y: scroll;
-}
-
-.news-headline{
-  max-width:400px;
-  word-wrap:break-word;
-}
-
-.card-stocks{
-  width: auto;
-  min-width: 100%;
-  margin-top: 10px;
-  overflow-y: auto;
-}
-
 .ticker-col{
-  margin:0px 10px;
+  margin:0px 10px 10px 10px;
 }
 
 .card-ticker{
@@ -75,7 +48,6 @@ div[class^='card-'], div[class*='card-']{
 
 .card-ticker-info{
   width: 50%;
-  margin-top: 0px;
   margin: 0px 10px 10px 10px;
 }
 
@@ -86,6 +58,35 @@ div[class^='card-'], div[class*='card-']{
 
 .ticker-info-col{
   min-width: 5%;
+}
+
+.news-and-stocks-col{
+  width: auto;
+  margin: 0px 10px;
+}
+
+.height-limit{
+  height:50%;
+}
+
+.card-news{
+  width: auto;
+  min-width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+}
+
+.news-headline{
+  /* would like to make this not static */
+  max-width:100%;
+  word-wrap:break-word;
+}
+
+.card-stocks{
+  width: auto;
+  min-width: 100%;
+  margin: 10px 0px;
+  overflow-y: auto;
 }
 
 .footer{
